--- a/Dockerfile.watcher
+++ b/Dockerfile.watcher
@@ -23,7 +23,7 @@ RUN curl -LO "https://dl.k8s.io/release/$(curl -L -s https://dl.k8s.io/release/s
 RUN npm install -g @anthropic-ai/claude-code
 
 # Create non-root user
-RUN useradd -m -s /bin/bash -u 1000 claude
+RUN useradd -m -s /bin/bash claude
 
 # Create working directory
 WORKDIR /app
