--- a/.github/workflows/helm-release.yml
+++ b/.github/workflows/helm-release.yml
@@ -27,8 +27,8 @@ jobs:
 
       - name: Configure Git
         run: |
-          git config user.name "$GITHUB_ACTOR"
-          git config user.email "$GITHUB_ACTOR@users.noreply.github.com"
+          git config --global user.name "github-actions[bot]"
+          git config --global user.email "github-actions[bot]@users.noreply.github.com"
 
       - name: Install Helm
         uses: azure/setup-helm@v3
@@ -60,21 +60,27 @@ jobs:
         with:
           ref: gh-pages
           path: gh-pages
+          token: ${{ secrets.GITHUB_TOKEN }}
         continue-on-error: true
 
       - name: Create gh-pages branch if not exists
         run: |
-          if [ ! -d "gh-pages" ]; then
-            mkdir gh-pages
+          if [ ! -d "gh-pages/.git" ]; then
+            mkdir -p gh-pages
             cd gh-pages
             git init
             git checkout -b gh-pages
             git remote add origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git
+            # Create initial index
+            echo "# Clopus Watcher Helm Repository" > README.md
+            git add README.md
+            git commit -m "Initialize gh-pages branch"
+            git push -u origin gh-pages
           fi
 
       - name: Update Helm repo index
         run: |
-          cp .cr-release-packages/*.tgz gh-pages/ || true
+          cp .cr-release-packages/*.tgz gh-pages/
           cd gh-pages
           helm repo index . --url https://${{ github.repository_owner }}.github.io/${{ github.event.repository.name }}/
 
@@ -82,8 +88,8 @@ jobs:
         run: |
           cd gh-pages
           git add .
-          git commit -m "Release Helm chart" || echo "No changes to commit"
-          git push origin gh-pages --force
+          git diff --staged --quiet || git commit -m "Release Helm chart"
+          git push origin gh-pages
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
