--- a/.github/workflows/helm-release.yml
+++ b/.github/workflows/helm-release.yml
@@ -29,6 +29,7 @@ jobs:
         run: |
           git config --global user.name "github-actions[bot]"
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
+          git config --global init.defaultBranch main
 
       - name: Install Helm
         uses: azure/setup-helm@v3
@@ -55,27 +56,18 @@ jobs:
           mkdir -p .cr-release-packages
           helm package chart/ -d .cr-release-packages
 
-      - name: Checkout gh-pages branch
-        uses: actions/checkout@v4
-        with:
-          ref: gh-pages
-          path: gh-pages
-          token: ${{ secrets.GITHUB_TOKEN }}
-        continue-on-error: true
-
-      - name: Create gh-pages branch if not exists
+      - name: Setup gh-pages branch
         run: |
-          if [ ! -d "gh-pages/.git" ]; then
+          # Check if gh-pages branch exists on remote
+          if git ls-remote --heads origin gh-pages | grep -q gh-pages; then
+            echo "gh-pages branch exists, cloning it"
+            git clone --single-branch --branch gh-pages https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git gh-pages
+          else
+            echo "gh-pages branch does not exist, creating it"
             mkdir -p gh-pages
             cd gh-pages
-            git init
-            git checkout -b gh-pages
+            git init -b gh-pages
             git remote add origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git
-            # Create initial index
-            echo "# Clopus Watcher Helm Repository" > README.md
-            git add README.md
-            git commit -m "Initialize gh-pages branch"
-            git push -u origin gh-pages
           fi
 
       - name: Update Helm repo index
