--- a/chart/templates/dashboard-deployment.yaml
+++ b/chart/templates/dashboard-deployment.yaml
@@ -28,6 +28,7 @@ spec:
       securityContext:
         {{- toYaml . | nindent 8 }}
       {{- end }}
+      serviceAccountName: {{ include "clopus-watcher.serviceAccountName" . }}
       containers:
         - name: dashboard
           image: "{{ .Values.dashboard.image.repository }}:{{ .Values.dashboard.image.tag }}"
