--- a/chart/templates/rbac.yaml
+++ b/chart/templates/rbac.yaml
@@ -62,6 +62,13 @@ rules:
   - apiGroups: [""]
     resources: ["resourcequotas"]
     verbs: ["get", "list"]
+  # Create jobs from cronjob (dashboard trigger feature)
+  - apiGroups: ["batch"]
+    resources: ["jobs"]
+    verbs: ["create", "get", "list"]
+  - apiGroups: ["batch"]
+    resources: ["cronjobs"]
+    verbs: ["get", "list"]
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
@@ -121,6 +128,13 @@ rules:
     verbs: ["get", "list"]
   - apiGroups: [""]
     resources: ["resourcequotas"]
+    verbs: ["get", "list"]
+  # Create jobs from cronjob (dashboard trigger feature)
+  - apiGroups: ["batch"]
+    resources: ["jobs"]
+    verbs: ["create", "get", "list"]
+  - apiGroups: ["batch"]
+    resources: ["cronjobs"]
     verbs: ["get", "list"]
 ---
 apiVersion: rbac.authorization.k8s.io/v1
