--- a/chart/templates/secret.yaml
+++ b/chart/templates/secret.yaml
@@ -10,3 +10,15 @@ type: Opaque
 stringData:
   {{ .Values.auth.apiKey.secretKey }}: {{ .Values.auth.apiKey.value | quote }}
 {{- end }}
+{{- if and (eq .Values.auth.mode "oauth-token") (not .Values.auth.oauthToken.existingSecret) }}
+apiVersion: v1
+kind: Secret
+metadata:
+  name: {{ include "clopus-watcher.authSecretName" . }}
+  namespace: {{ include "clopus-watcher.namespace" . }}
+  labels:
+    {{- include "clopus-watcher.labels" . | nindent 4 }}
+type: Opaque
+stringData:
+  {{ .Values.auth.oauthToken.secretKey }}: {{ .Values.auth.oauthToken.value | quote }}
+{{- end }}
