--- a/Dockerfile.watcher
+++ b/Dockerfile.watcher
@@ -9,6 +9,7 @@ RUN apt-get update && apt-get install -y \
     ca-certificates \
     gnupg \
     coreutils \
+    xxd \
     && rm -rf /var/lib/apt/lists/*
 
 # Install Node.js (required for Claude Code)
